# nacho

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cargo.yml  ci.yml  nodejs.yml
authenticator/: package-lock.json  package.json
authenticator-script/: package-lock.json  package.json  tsconfig.json
authenticator-script/src/: index.ts  parse.ts
authenticator/src/: check.ts  index.ts  input.ts  parse.ts
balances-db/: Cargo.toml
balances-db/src/: balances_db.rs  constants.rs  double_balance_witness.rs  error.rs  lib.rs  single_balance_witness.rs
bridge-contract/: README.md  package-lock.json  package.json  tsconfig.json
bridge-contract/src/: bridge-contract.ts  index.ts  safe-contract.ts
bridge-contract/tests/: bridge-contract.test.ts
burns-db/: Cargo.toml
burns-db/src/: burns_db.rs  constants.rs  error.rs  lib.rs  single_burn_witness.rs
common/: Cargo.toml
common-o1js/: README.md  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
common-o1js/src/: constants.ts  double-witness.ts  index.ts  single-witness.ts  structs.ts  types.ts  utils.ts  witnesses.ts
common/src/: balance.rs  burn.rs  field.rs  lib.rs  liquidity.rs  pair.rs  poseidon_hash.rs  public_key.rs  to_fields.rs  uint64.rs
data-structures/: Cargo.toml
data-structures/src/: address.rs  balance.rs  burn.rs  byte_conversion.rs  deposit.rs  double_merkle_witness.rs  errors.rs  field.rs  field_conversion.rs  from_bytes.rs  group.rs  lib.rs  liquidity.rs  pair.rs  pool.rs  prover_method.rs  public_key.rs  scalar.rs  sibling.rs  signature.rs  single_merkle_witness.rs  state_roots.rs  stateful_transaction.rs  to_bytes.rs  to_fields.rs  transaction.rs  tx_status.rs  u256.rs  uint64.rs  withdrawal.rs
deposit-tree/: Cargo.toml
dynamic-list/: Cargo.toml
dynamic-list/src/: dynamic_list.rs  error.rs  lib.rs
dynamic-merkle-tree/: Cargo.toml
dynamic-merkle-tree/src/: dynamic_merkle_tree.rs  error.rs  lib.rs
dynamic-queue/: Cargo.toml
dynamic-queue/src/: dynamic_queue.rs  error.rs  lib.rs
event-fetcher-process/: README.md  package-lock.json  package.json  rollup.config.js
event-fetcher-process/src/: fetch.ts  index.ts  output.ts  parse.ts  types.ts
event-fetcher-script/: package-lock.json  package.json
events-db/: Cargo.toml
executor/: Cargo.toml
generator/: Cargo.toml
generator-script/: package-lock.json  package.json
interface/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
js-process/: Cargo.toml
liquidities-db/: Cargo.toml
macros/: Cargo.toml
mempool/: Cargo.toml
mempool-deque/: Cargo.toml
merger-script/: package-lock.json  package.json
merkle-tree/: Cargo.toml
merkle-tree/src/: double_witness.rs  error.rs  lib.rs  macros.rs  merkle_tree.rs  sibling.rs  single_witness.rs  witness.rs  witness_x1.rs  witness_x2.rs  witness_x3.rs  witness_x4.rs
nacho-database/: Cargo.toml
nacho-merkle-tree/: Cargo.toml
nacho-poseidon-hash/: Cargo.toml
nacho-proc-macros/: Cargo.toml
nacho-prover/: Cargo.toml
nacho-server/: Cargo.toml
nacho-types/: Cargo.toml
o1js/: package.json  pnpm-lock.yaml  tsconfig.json
pools-db/: Cargo.toml
poseidon-hash/: Cargo.toml
poseidon-hash/src/: lib.rs  poseidon_hash.rs
processes/: Cargo.toml
processes/src/: lib.rs
processes/src/authenticator/: process.rs  processor.rs
processes/src/balances/: process.rs  processor.rs  request.rs
processes/src/burns/: process.rs  processor.rs  request.rs
processes/src/executor/: mod.rs  process.rs  processor.rs  request.rs
processes/src/fetcher/: process.rs  processor.rs
processes/src/generator/: process.rs  processor.rs
processes/src/liquidities/: process.rs  processor.rs  request.rs
processes/src/mempool/: process.rs  request.rs
processes/src/merger/: process.rs  processor.rs
processes/src/pools/: process.rs  processor.rs  request.rs
processes/src/proofpool/: mod.rs  process.rs  processor.rs  request.rs
processes/src/submitter/: process.rs
processes/src/transactions/: process.rs  processor.rs  request.rs
processes/src/verifier/: process.rs  processor.rs  request.rs
processes/src/withdrawals/: process.rs  processor.rs  request.rs
proof-generator/: README.md  package-lock.json  package.json  rollup.config.mjs
proof-generator-process/: README.md  package-lock.json  package.json  rollup.config.js
proof-generator-script/: package-lock.json  package.json
proof-merger-process/: LICENSE  README.md  package-lock.json  package.json  rollup.config.js
proof-merger-script/: package-lock.json  package.json
proof-submitter/: Cargo.toml
proof-submitter-process/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
proof-submitter-script/: package-lock.json  package.json
proofpool/: Cargo.toml
proofpool-deque/: Cargo.toml
proofs-db/: Cargo.toml
prover/: Cargo.toml  package-lock.json  package.json
prover-method/: Cargo.toml
prover-method/src/: lib.rs  prover_method.rs
queue/: Cargo.toml
rollup/: Cargo.toml
rollup-contract/: README.md  package-lock.json  package.json
rollup/src/: main.rs
rpc-server/: Cargo.toml
rpc-server/src/: errors.rs  lib.rs  rpc_method.rs  rpc_response.rs  start_rpc_server.rs
schnorr-signature/: Cargo.toml
scripts/: build-nacho.sh  environment-variables.sh  install-dependencies.sh  setup.sh  start-mina.sh  start-nacho.sh
sdk/: package-lock.json  package.json
setup-script/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
signature-verifier-process/: README.md  package-lock.json  package.json  rollup.config.js
smart-contract/: Cargo.toml
state-database/: Cargo.toml
state-fetcher/: Cargo.toml
state-tree/: Cargo.toml
static-list/: Cargo.toml
static-merkle-tree/: Cargo.toml
token-contract/: README.md  package-lock.json  package.json  tsconfig.json
transactions-db/: Cargo.toml
tx-status-list/: Cargo.toml
withdrawal-tree/: Cargo.toml
withdrawals-db/: Cargo.toml
witness-database/: Cargo.toml
zk-rollup/: Cargo.toml
(+207 files in other folders)
