[workspace]
resolver = "2"
members = [
    "balances-db",
    "burns-db",
    "data-structures",
    "dynamic-queue",
    "liquidities-db",
    "dynamic-list",
    "mempool",
    "merkle-tree",
    "pools-db",
    "poseidon-hash",
    "proofpool",
    "rpc-server",
    "rollup",
    "withdrawals-db",
    "transactions-db",
    "processes",
    "executor",
]

[workspace.dependencies]
# Crates.io dependencies.
ark-ff = { version = "0.3.0" }
thiserror = { version = "1.0" }
tokio = { version = "1.36.0", features = ["full"] }
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.0", features = ["full"] }
http-body-util = { version = "0.1.1" }
primitive-types = { version = "0.12.2" }
# GitHub dependencies.
mina-curves = { git = "https://github.com/o1-labs/proof-systems", branch = "master" }
mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", branch = "master" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems", branch = "master" }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", branch = "master" }

# Local dependencies.
nacho-balances-db.path = "balances-db"
nacho-burns-db.path = "burns-db"
nacho-data-structures.path = "data-structures"
nacho-dynamic-queue.path = "dynamic-queue"
nacho-liquidities-db.path = "liquidities-db"
nacho-dynamic-list.path = "dynamic-list"
nacho-executor.path = "executor"
nacho-mempool.path = "mempool"
nacho-merkle-tree.path = "merkle-tree"
nacho-pools-db.path = "pools-db"
nacho-poseidon-hash.path = "poseidon-hash"
nacho-processes.path = "processes"
nacho-proofpool.path = "proofpool"
nacho-rpc-server.path = "rpc-server"
nacho-withdrawals-db.path = "withdrawals-db"
nacho-transactions-db.path = "transactions-db"
