[workspace]
resolver = "2"
members = [
    "balances-db",
    "burns-db",
    "data-structures",
    "static-list",
    "dynamic-list",
    "dynamic-queue",
    "executor",
    "liquidities-db",
    "mempool",
    "static-merkle-tree",
    "dynamic-merkle-tree",
    "pools-db",
    "poseidon-hash",
    "processes",
    "proofpool",
    "rpc-server",
    "rollup",
    "transactions-db",
    "withdrawals-db",
    "schnorr-signature",
    "macros",
    "events-db",
    "js-process",
]

[workspace.dependencies]
# Crates.io dependencies.
ark-ff = { version = "0.3.0" }
thiserror = { version = "1.0" }
tokio = { version = "1.36.0", features = ["full"] }
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.0", features = ["full"] }
http-body-util = { version = "0.1.1" }
primitive-types = { version = "0.12.2" }

# GitHub dependencies.
mina-curves = { git = "https://github.com/o1-labs/proof-systems", branch = "master" }
mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", branch = "master" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems", branch = "master" }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", branch = "master" }
o1-utils = { git = "https://github.com/o1-labs/proof-systems", branch = "master" }

# Local dependencies.
nacho-balances-db.path = "balances-db"
nacho-burns-db.path = "burns-db"
nacho-macros.path = "macros"
nacho-static-merkle-tree.path = "static-merkle-tree"
nacho-data-structures.path = "data-structures"
nacho-dynamic-queue.path = "dynamic-queue"
nacho-liquidities-db.path = "liquidities-db"
nacho-dynamic-list.path = "dynamic-list"
nacho-static-list.path = "static-list"
nacho-executor.path = "executor"
nacho-mempool.path = "mempool"
nacho-dynamic-merkle-tree.path = "dynamic-merkle-tree"
nacho-pools-db.path = "pools-db"
nacho-poseidon-hash.path = "poseidon-hash"
nacho-processes.path = "processes"
nacho-proofpool.path = "proofpool"
nacho-events-db.path = "events-db"
nacho-js-process.path = "js-process"
nacho-rpc-server.path = "rpc-server"
nacho-schnorr-signature.path = "schnorr-signature"
nacho-withdrawals-db.path = "withdrawals-db"
nacho-transactions-db.path = "transactions-db"
