[package]
name = "nacho-burns-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nacho-data-structures.workspace = true
nacho-dynamic-merkle-tree.workspace = true
nacho-dynamic-list.workspace = true
nacho-poseidon-hash.workspace = true
tokio.workspace = true
thiserror.workspace = true
