[package]
name = "nacho-data-structures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crates.io dependencies.
ark-ff.workspace = true
thiserror.workspace = true
primitive-types.workspace = true

# GitHub dependencies.
mina-curves.workspace = true
mina-signer.workspace = true
