[package]
name = "nacho-poseidon-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# GitHub dependencies.
mina-poseidon.workspace = true
mina-signer.workspace = true
mina-hasher.workspace = true
o1-utils.workspace = true
