[package]
name = "prover-method"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nacho-data-structures.workspace = true
nacho-balances-db.workspace = true
nacho-pools-db.workspace = true
nacho-liquidities-db.workspace = true
nacho-burns-db.workspace = true
