[package]
name = "nacho-rpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crates.io dependencies
thiserror.workspace = true
ark-ff.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true

# GitHub dependencies.
mina-signer.workspace = true

# Local dependencies.
nacho-data-structures.workspace = true
nacho-burns-db.workspace = true
nacho-withdrawals-db.workspace = true
